--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "benzin-medium";
+  src: url("/fonts/benzin-medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 @layer base {
   :root {
     --foreground-rgb: 255, 255, 255;
