--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,10 @@
   --font-xwide: "font-xwide";
 }
 
+.font-inter {
+  font-family: var(--font-inter);
+}
+
 @font-face {
   font-family: "BGMxwidemedium";
   src: url("/fonts/fontspring_xwidemedium.otf") format("opentype");
