--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,14 @@
 }
 
 @font-face {
+  font-family: "BGMfreigeistBlack";
+  src: url("/fonts/Fontspring-demo-freigeist-xwideblack.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: "norms-pro";
   src: url("/fonts/tt-norms-pro-trail-normal.ttf") format("truetype");
   font-weight: normal;
